修复了在dashboard和可排序表格中发布问卷出错的问题

--- a/src/interface/templates/legalUser/applications/applications_content.html
+++ b/src/interface/templates/legalUser/applications/applications_content.html
@@ -58,7 +58,7 @@
                                 </a>
                             </li>
                             <li style="width: 33%" align="center">
-                                <a class="fake-link" href="javascript:publish_act('{{ app.id }}', '{% url 'api/publish_act' %}', '{% url 'legalUser/modal' %}')" >
+                                <a class="fake-link" href="javascript:email_act('{{ app.id }}', '{% url 'legalUser/modal' %}')" >
                                     <i class="fa fa-file-text-o fa-fw fa-2x" aria-hidden="true"></i> 发布
                                 </a>
                             </li>
