--- a/src/interface/templates/questionnaire/questionnaire_success.html
+++ b/src/interface/templates/questionnaire/questionnaire_success.html
@@ -1,27 +1,253 @@
-{% extends 'questionnaire/index.html' %}
+{% load staticfiles %}
+<!DOCTYPE html>
+<html>
+<head>
+<title>注册用户登陆</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'base/css/fonts.min.css' %}" rel="stylesheet">
+    <link href="{% static 'base/css/eden.min.css' %}" rel="stylesheet">
+    <link href="{% static 'animate/css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'base/css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'icheck-1.x/skins/all.css' %}" rel="stylesheet">
+
+    {% block css %}
+    {% endblock css %}
+
+    <script src="{% static 'jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery.history.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery.scrollto.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery.fixer.min.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+    <script src="{% static 'base/js/scripts.js' %}"></script>
+
+    <script src="{% static 'md5/md5.min.js' %}"></script>
+    <script src="{% static 'validator/validator.min.js' %}"></script>
+    {% block scripts %}
+    {% endblock scripts %}
+</head>
+
+<style>
+    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, dl, dt, dd, ol, nav ul, nav li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video,input {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size:100%;
+	font:inherit;
+	vertical-align: baseline;
+	font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", FontAwesome, sans-serif;}
+article, aside, details, figcaption, figure, footer, header, menu, nav, section {
+	display: block;
+}
+ol, ul {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after, q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* start editing from here */
+a {
+	text-decoration: none;
+}
+img {
+	max-width: 100%;
+}
+/*end reset*/
+/****-----start-body----****/
+body {
+	background-color: #2c3e50;
+}
+.main {
+	margin: 5em auto 0;
+	width: 22%;
+}
+h1 {
+	font-size: 2.4em;
+	padding-bottom: 28px;
+	color: #fff;
+	text-align: center;
+}
+h2 {
+	font-size: 1.5em;
+	padding-bottom: 28px;
+	color: #2c3e50;
+	text-align: center;
+}
+.login {
+	padding: 2em 0;
+}
+.inset {
+	position: relative;
+	background: #fff;
+	padding: 2.5em;
+	border-radius: 0.3em;
+	-webkit-border-radius: 0.3em;
+	-o-border-radius: 0.3em;
+	-moz-border-radius: 0.3em;
+	box-shadow: 0px 0px 15px #545454;
+}
+form span {
+	display: block;
+	font-size: 1.0em;
+	color: #333;
+	font-weight: 400;
+}
+input[type="text"], input[type="password"] {
+	padding: 9px;
+	width: 93.4%;
+	font-size: 1.1em;
+	margin: 3px 0px 25px;
+	color: #666666;
+	background: #f0f0f0;
+	border: none;
+	outline: none;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-ms-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+	border-radius: 0.2em;
+	-webkit-border-radius: 0.2em;
+	-o-border-radius: 0.2em;
+	-moz-border-radius: 0.2em;
+}
+input[type="text"]:hover, input[type="Password"]:hover, #active {
+	border: none;
+	outline: none;
+}
+
+a{
+    font-size: 0.7em;
+    float: right;
+    margin-top: 6%;
+}
+
+.sign {
+	padding: 10px 0 0;
+	text-align: center;
+}
+.submit {
+	margin-right:11px;
+	background:#2c3e50;
+	border: none;
+	outline: none;
+	padding:8px 30px;
+	cursor: pointer;
+	color: #FFF;
+	font-size: 0.9em;
+	border-radius: .3em;
+	-webkit-border-radius: .3em;
+	-moz-border-radius: .3em;
+	-o-border-radius: .3em;
+	transition: 0.5s all;
+	-webkit-transition: 0.5s all;
+	-moz-transition: 0.5s all;
+	-o-transition: 0.5s all;
+	font-weight: 600;
+	margin: 0 auto;
+}
+.submit:hover {
+	background: #C5C5C5;
+}
+@media (max-width:1440px) {
+.main {
+	width: 25%;
+}
+h1 {
+	font-size: 2.2em;
+}
+}
+@media (max-width:1080px) {
+.main {
+	width: 31%;
+	margin: 5em auto 0;
+}
+}
+@media (max-width:1024px) {
+.main {
+	width: 31%;
+	margin: 5em auto 0;
+}
+}
+@media (max-width:991px) {
+h1 {
+	font-size: 2em;
+}
+}
+@media (max-width:800px) {
+.main {
+	width: 39%;
+}
+}
+@media (max-width:768px) {
+.main {
+	width: 42%;
+	margin: 11em auto 0;
+}
+}
+@media (max-width:640px) {
+.main {
+	width: 48%;
+}
+h1 {
+	font-size: 2.1em;
+}
+}
+@media (max-width:600px) {
+h1 {
+	font-size: 2em;
+}
+}
+@media (max-width:480px) {
+.main {
+	width: 70%;
+}
+}
+@media (max-width:320px) {
+.main {
+	width: 95%;
+	margin: 1em auto 0;
+}
+.inset {
+	padding: 2em;
+}
+h1 {
+	font-size: 1.9em;
+}
+.login {
+	padding: 2em 0 0;
+}
+}
+</style>
+
+</head>
 <body>
-{% block main-page %}
-    <div style="display : table;
-        margin-left: 20%;
-        margin-top: 7%;
-        border: 1px dashed #2c3e50;
-        border-radius: 5px;
-        width: 55%;
-        min-width: 300px;
-        height: 15%;
-        min-height: 130px;
-        position: relative">
-
-        <p style="margin-left: 30%;
-                  margin-top: 7%;"><strong>问卷填写成功</strong></p>
-
-        <a href="{% url 'legalUser/login' %}"
-           style="position: absolute;
-                  right: 5px;
-                  bottom: 5px;
-                  font-size: 0.6em">来自清华大学信息化统计平台</a>
-    </div>
-
-{% endblock main-page %}
-<body>
+	<div class="main">
+		<div class="login">
+			<div class="inset">
+                    <br>
+                    <h2><strong>问卷填写成功</strong></h2>
+                    <a href="{% url 'legalUser/login' %}">来自清华大学信息化统计平台</a>
+				</div>
+			</div>
+		</div>
+</body>
+</html>
