--- a/src/interface/templates/legalUser/statistics/statistics.ajax.html
+++ b/src/interface/templates/legalUser/statistics/statistics.ajax.html
@@ -1,7 +1,9 @@
 {% load staticfiles %}
 <div class="top-row hidden-xs">
-
-    <a>&nbsp</a>
+    <a>&nbsp;</a>
+    <a class="fake-link" onclick="History.back()">
+        <strong><i class="fa fa-chevron-left fa-fw"></i>&nbsp;&nbsp;返回</strong>
+    </a>
     <a class="fake-link pull-right">
         <strong>统计信息　<i class="fa fa-bar-chart fa-fw"></i></strong>
     </a>
@@ -10,8 +12,11 @@
 
 
 <ul class="nav nav-tabs">
-    <li role="presentation" class="active">
-        <a href="#single_chart" data-toggle="tab" class="statistics-tab" id="display_chart">单题信息</a>
+    <li role="presentation"  class="active">
+        <a href="#information" data-toggle="tab" class="statistics-tab">信息概览</a>
+    </li>
+    <li role="presentation">
+        <a href="#single_chart" data-toggle="tab" class="statistics-tab" onclick="return change_qst();">单题信息</a>
     </li>
     <li role="presentation">
         <a href="#data_analyse" data-toggle="tab" class="statistics-tab">整体报告</a>
@@ -21,7 +26,11 @@
     </li>
 </ul>
 <div class="tab-content" data-loading="true">
-    <div id="single_chart" class="tab-pane fade active in">
+    <div id="information" class="tab-pane fade active in">
+        {% include 'legalUser/statistics/information.html' %}
+    </div>
+
+    <div id="single_chart" class="tab-pane fade">
         <div class="panel panel-default" id="qst_choose">
             <div class="panel-heading">
                 <h4>单题数据统计<span class="badge pull-right">{{ act_info.questions|length }}</span></h4></div>
@@ -54,9 +63,6 @@
                 url = url.replace('1234', select_id);
                 loadContentOn($("#chart_field"), url);
             }
-            $(document).ready(function() {
-                change_qst();
-            })
         </script>
     </div>
 
