实现了实验室招募题的设计、编辑、问卷展示、数据统计

--- a/src/interface/templates/legalUser/design/design_list.html
+++ b/src/interface/templates/legalUser/design/design_list.html
@@ -50,7 +50,11 @@
                     'option_num': '{{qst.option_num}}',
                     'option': '{{qst.option}}',
                     'rows': '{{qst.rows}}',
-                    'hint': '{{qst.hint}}'
+                    'hint': '{{qst.hint}}',
+
+                    'qst_must': '{{ qst.qst_must }}',
+                    'min_selected': '{{ qst.min_selected }}',
+                    'max_selected': '{{ qst.max_selected }}'
                 }
 
                 loadContentOn($(".last-question"), "{% url 'legalUser/design/question' type act_id%}", pre_info_param, {anim: false, scroll: false});
