--- a/src/interface/templates/questionnaire/publish_qst/fillin.html
+++ b/src/interface/templates/questionnaire/publish_qst/fillin.html
@@ -3,6 +3,7 @@
 {% block title%}
 
         <label for="fillin_field" id="fillin_title" class="control-label">请在此输入问题标题</label>
+        <label id = "must_qst" style="color:red; display: none;">&nbsp;*</label>
 
         <div class="row" style="text-align: left; padding-left:25px; padding-top: 10px;">
                 <textarea id="fillin_field" name="qst{{ questions_id }}" class="form-control"
@@ -20,6 +21,9 @@
             if('{{hint}}' != 'None')
             	source_panel_body.find("#fillin_field").attr('placeholder', '{{hint}}');
 
+            //必答题星号
+            if('{{qst_must}}' == 'true')
+                source_panel_body.find("#must_qst").css("display", '');
 
             //加载选框样式
             $('input').iCheck({
