--- a/src/interface/templates/questionnaire/publish_qst/multi.html
+++ b/src/interface/templates/questionnaire/publish_qst/multi.html
@@ -3,9 +3,10 @@
 {% block title%}
 
 	<label for="name" id="multi_title" class="control-label">请在此输入问题标题</label>
+    <label id = "must_qst" style="color:red; display: none;">&nbsp;*</label>
+    <label id = "select_hint"></label>
     <div id="checkbox-list">
         <div class="checkbox">
-            &emsp;
             <label>
             <input type="checkbox" name="qst{{ questions_id }}" id="optionsCheckbox1" value="option1" class="form-control">
                 <label for="this.prev();">选项 1</label>
@@ -13,7 +14,6 @@
         </div>
 
         <div class="checkbox">
-            &emsp;
             <label>
             <input type="checkbox" name="qst{{ questions_id }}" id="optionsCheckbox2" value="option2" class="form-control">
                 <label for="this.prev();">选项 2</label>
@@ -28,6 +28,23 @@
             if('{{questions_title}}' != 'None')
                 source_panel_body.find("#multi_title").html('{{questions_title}}');
 
+            //必答题星号
+            if('{{qst_must}}' == 'true')
+                source_panel_body.find("#must_qst").css("display", '');
+
+            //设置选择提示
+            var select_hint = source_panel_body.find("#select_hint");
+            if('{{min_selected}}' == 'None' || '{{min_selected}}' == '') {
+                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '')
+                    select_hint.html("&nbsp;[最多选择" + '{{max_selected}}' + "项]");
+            }
+            else {
+                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '')
+                    select_hint.html("&nbsp;[请选择" + '{{min_selected}}' + " - " + '{{max_selected}}' + "项]");
+                else
+                    select_hint.html("&nbsp;[至少选择" + '{{min_selected}}' + "项]")
+            }
+
             if('{{option}}' != 'None')
             {
                 //全删除
@@ -35,9 +52,16 @@
                     $(this).remove();
                 });
 
+                //加载人数限制
+                var statistics = new Array();
+                var left = new Array();
+                '{% for opt in statistics %}'
+                    statistics['{{forloop.counter}}'] = '{{opt.max}}';
+                    left['{{forloop.counter}}'] = '{{opt.left}}';
+                '{% endfor %}'
+
                 var option_name = 'qst' + '{{ questions_id }}';
                 var prefix = '<div class="checkbox">\
-                                &emsp;\
                                 <label>\
                                 <input class="form-control" type="checkbox" name=' + option_name + ' id=';
                 //一个一个加选项
@@ -45,8 +69,15 @@
                     var option_field = '{{option}}'.split('###')[(i - 1) * 2 + 1];
                     var radio_id = "optionsCheckbox" + i;
                     var radio_value = "option" + i;
+
+                    var option_maxium = statistics[i];
+                    var left_num = left[i];
+                    if (option_maxium != '') {
+                        option_maxium = "【 剩余可选择次数: " + left_num + ' / ' + option_maxium + ' 】';
+                    }
                     var to_append = prefix + radio_id + ' value=' + radio_value + '>\
                                         <label for="this.prev();">' + option_field + '</label\
+                                        <label for="this.prev();">' + option_maxium + '</label>\
                                         </lable>\
                                     </div>';
                     source_panel_body.find("#checkbox-list").append(to_append);
