--- a/src/interface/templates/legalUser/design/design.ajax.html
+++ b/src/interface/templates/legalUser/design/design.ajax.html
@@ -143,7 +143,7 @@
             </li>
             <hr>
             <li id="mark-question" class="nav-header">
-                <a class="fake-link"><i class="fa fa-heart-o fa-fw"></i>　评分题</a>
+                <a class="fake-link"><i class="fa fa-heart-o fa-fw"></i>　招募题</a>
             </li>
             <hr>
             <li id="sort-question" class="nav-header">
