--- a/src/interface/templates/legalUser/design/questions/multi.html
+++ b/src/interface/templates/legalUser/design/questions/multi.html
@@ -7,7 +7,6 @@
     <label id = "select_hint"></label>
     <div id="checkbox-list">
         <div class="checkbox">
-            &emsp;
             <label>
             <input type="checkbox" name="option{{ questions_id }}" id="optionsCheckbox1" value="option1">
                 <label for="this.prev();">选项 1</label>
@@ -15,7 +14,6 @@
         </div>
 
         <div class="checkbox">
-            &emsp;
             <label>
             <input type="checkbox" name="option{{ questions_id }}" id="optionsCheckbox2" value="option2">
                 <label for="this.prev();">选项 2</label>
@@ -27,7 +25,7 @@
         $(document).ready(function(){
 
             var source_panel_body = $("#qst{{ questions_id }}");
-            if('{{questions_title}}' != 'None')
+            if('{{questions_title}}' != 'None' && '{{questions_title}}' != '')
                 source_panel_body.find("#multi_title").html('{{questions_title}}');
 
             //必答题星号
@@ -36,12 +34,13 @@
 
             //设置选择提示
             var select_hint = source_panel_body.find("#select_hint");
-            if('{{min_selected}}' == '') {
-                if('{{max_selected}}' != '')
+
+            if('{{min_selected}}' == 'None' || '{{min_selected}}' == '') {
+                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '')
                     select_hint.html("&nbsp;[最多选择" + '{{max_selected}}' + "项]");
             }
             else {
-                if('{{max_selected}}' != '')
+                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '')
                     select_hint.html("&nbsp;[请选择" + '{{min_selected}}' + " - " + '{{max_selected}}' + "项]");
                 else
                     select_hint.html("&nbsp;[至少选择" + '{{min_selected}}' + "项]")
@@ -62,7 +61,6 @@
                 
                 var option_name = 'option' + '{{ questions_id }}';
                 var prefix = '<div class="checkbox">\
-                                &emsp;\
                                 <label>\
                                 <input type="checkbox" name=' + option_name + ' id=';
                 //一个一个加选项
