--- a/src/interface/templates/legalUser/statistics/information.html
+++ b/src/interface/templates/legalUser/statistics/information.html
@@ -89,8 +89,10 @@
                             {% endif %}
                         </div>
                     </div>
-                    <div class="col-sm-6" id="qrcode" align="center">
-                        
+                    <div class="col-sm-6" align="center">
+                        <div id="qrcode">
+
+                        </div>
                     </div>
                     <script type="text/javascript">
                      //   alert("{{act_id}}");
