--- a/src/interface/templates/legalUser/design/modal/email_modal.html
+++ b/src/interface/templates/legalUser/design/modal/email_modal.html
@@ -18,7 +18,7 @@
                         <div class="row" style="text-align: left;">
                             <div class="col-xs-12 form-group">
                                 <label class="control-label" for="activity_title">邮箱地址</label>
-                                <input id="email_address" name="email" class="form-control"
+                                <input type='email' id="email_address" name="email" class="form-control"
                                               style="resize: vertical;">
                             </div>
                         </div>
@@ -54,7 +54,7 @@
                         params = {
                             'modal_type': 'publish',
                             'id': '{{ id }}',
-                        }
+                        };
                         showModal("{% url 'legalUser/modal' %}", 'publish-modal', params);
                     },
                     error: function (xhr, textStatus, errorThrown) {
